--- a/index.html
+++ b/index.html
@@ -2,14 +2,51 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href= "index.css">
-	<title>Modal</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>JPK Coffee Company</title>
 </head>
 <body>
 
+
+<div class="navbar" id="mynavbar">
+  		<a href="index.html" class="active">Home</a>
+  		<a href="firstproject/index.html">About the Owner</a>
+</div>
+	
+
+
+<div class = photo>
+	<div class = "wrapper">
+		<div id = 'header'>
+		<h1> JPK Coffee Company</h1>
+		</div>
+	</div>
+	<div class = 'wrapper2'>
+		<div id = 'header2'>
+			A Modern Coffee Shop 
+		</div>
+	<div class = 'wrapper3'>
+	
+		<div id = 'text'>
+		<p> 	Coffee is a brewed drink prepared from roasted coffee beans, which are the seeds of berries from the Coffea plant. The genus Coffea is native to tropical Africa (specifically having its origin in Ethiopia and Sudan) and Madagascar, the Comoros, Mauritius, and Réunion in the Indian Ocean.[2] The plant was exported from Africa to Arabia and to countries around the world. Coffee plants are now cultivated in over 70 countries, primarily in the equatorial regions of the Americas, Southeast Asia, India, and Africa. The two most commonly grown are the highly regarded arabica, and the less sophisticated but stronger and hardier robusta. Once ripe, coffee berries are picked, processed, and dried. Dried coffee seeds (referred to as beans) are roasted to varying degrees, depending on the desired flavor. Roasted beans are ground and brewed with near-boiling water to produce coffee as a beverage.</p>
+
+		</div>
+
+	</div>
+</div>
+
+
+
+
 <div id = "modal">
-<div id = "close">
+	<div id = "close"> X
+	</div>
+	<div id = "modaltext">
+		Hey you! Do you like coffee? Follow us on <a href="https://www.facebook.com">Facebook </a> for the latest coffee news.
+	</div>
 </div>
-</div>
+
 
 <script type="text/javascript" src ="index.js">
 </script>
