--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="navbar" id="mynavbar">
   		<a href="index.html" class="active">Home</a>
-  		<a href="firstproject/index.html">About the Owner</a>
+  		<a href="about/index.html">About the Owner</a>
 </div>
 	
 
@@ -34,6 +34,7 @@
 		</div>
 
 	</div>
+	<div class="endtext"> A Jordyn Kimelheim Jawn </div>
 </div>
 
 
@@ -42,10 +43,18 @@
 <div id = "modal">
 	<div id = "close"> X
 	</div>
+	<div id = "thanks"> 
+		<h2>Thanks!</h2>
+		<p> We'll be in touch soon.</p>
+	</div>
 	<div id = "modaltext">
-		Hey you! Do you like coffee? Follow us on <a href="https://www.facebook.com">Facebook </a> for the latest coffee news.
+		Hey you! Do you like coffee? Sign up for our email list to learn more about JPK Coffee Company:
+		<input type = text, id = "email">
+		<input type = "submit", id='submit'>
 	</div>
 </div>
+
+
 
 
 <script type="text/javascript" src ="index.js">
